# personal-secretary

./: .env.example  .gitignore  README.md  pyproject.toml
date_extractor_package/: __init__.py  date_extractor.py
date_extractor_package/models/: __init__.py  date_extractor_input.py  date_extractor_result.py  message.py
src/: bot.py  callback.py  commands.py  google.py  handlers.py  models.py  settings.py  storage.py  tg_menu.py
src/ner/: __init__.py  date_extractor.py  readme.md
src/ner/models/: __init__.py  date_extractor_input.py  date_extractor_result.py  message.py
src/ner/tests/: date_extractor_tests.py
tests/: date_extractor_tests.py
tools/: init_db.py
