[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.py$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv*
  | _build
  | build
  | dist
  | lib
  | include
  | bin
)/
'''

[tool.poetry]
name = "personal-secretary-bot"
version = "0.8.2"
description = "Personal secretary bot"
authors = ["veledara <mvchesnovskiy@edu.hse.ru>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
pyTelegramBotAPI = "<=4.4.0"
pydantic = {extras = ["dotenv"], version = "<=1.9.0"}
google-api-python-client = "^2.44.0"
google-auth-oauthlib = "^0.5.1"
SQLAlchemy = "^1.4.35"
fastapi = "<=0.73.0"
uvicorn = "<=0.17.4"
deeppavlov = "1.0.0rc0"
dateparser = "^1.1.1"
emoji = "^1.7.0"
numpy = "~=1.19.5"

[tool.poetry.dev-dependencies]
black = "22.1.0"

[tool.poetry.scripts]
bot = "src.bot:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
